--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             midt i Gentofte. Historisk set har KTAS's bygninger over hele landet
             haft en særlig betydning og blev placeret i hjertet af den enkelte
             by, for at skabe kontakt mellem mennesker og give liv til nye
-            relationer og projekter. Hos os i Bloom fortsætter vi denne
+              relationer og projekter.</p>
+              <p> Hos os i Bloom fortsætter vi denne
             tradition i en endnu mere nærværende form, hvor bygningen er rammen
             for nye kreative og skabende fællesskaber. Hos Bloom har vi fokus på
             de kreative relationer med de deltagende børn og voksne og på den
