--- a/om.html
+++ b/om.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html id="om_os" lang="da">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -24,33 +25,22 @@
                     <h1>Vi tror på det unikke menneske</h1>
                     <p>
                         Verdens hurtige forandringer kræver nytænkning, nye løsninger, nye jobs og nye virksomheder i systemer og formater, som vi ikke kan forestille os. Forandringer af den størrelse og i det tempo, som vi ser nu, stiller store krav til os som mennesker, til vores evne til både at passe på os selv og kloden og til at tænke nyt i en verden præget af stigende kompleksitet. Som mennesker kan vi ikke konkurrere med udviklingen og mindst af alt med maskinernes hurtighed og præcision. Vi må derfor satse på at udvikle det unikke i os som mennesker og individer – det unikke vil nemlig aldrig kunne udkonkurreres og kan ikke erstattes af hurtighed. Det er i det unikke, at vi finder det ekstraordinære – de nye perspektiver, de nye løsninger og de nye handlemønstre.
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <section class="section">
-            <div class="gridcon">
-                <div class="griditem">
-                    <h1>Kunst møder iværksætteri</h1>
+                    </p> <br>
+                    <h2>Kunst møder iværksætteri</h2>
                     <p>
                         Hos BLOOM Institute skaber vi koncepter der understøtter børn og unges læring indenfor krydsfeltet mellem kunst og iværksætteri. Igennem vores uddannelseskoncepter, som består af forløb for børn, uddannelse af lærere og indretning af undervisningslokaler, vil vi være med til at udvikle en ny generation af kreative entreprenører, som har en indre motivation og forståelse for, at omsætte ideer til virkelige produkter og services. I vores miljøer færdes børn i en kultur, hvor de på motiverende vis trænes til at omsætte kunstneriske og kreative tilgange, med sigte på at øge deres lyst til at være igangsættere/iværksættere senere i livet.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="section" class>
-            <div class="gridcon">
-                <div class="griditem">
-                    <h1>Fra ide til produkt</h1>
+                    </p><br>
+                    <h2>Fra ide til produkt</h2>
                     <p>
                         Fra ide til produkt Dedikerede undervisere, udøvende kunstnere og erhvervslivets innovative hoveder, guider og hjælper med til at føre børn og unges idéer ud i livet. Alle involverede bliver trænet i at trække det, der virker, ud af deltagernes rene kreativitet og umiddelbare output – og helt konkret omforme det til værdi og reelle produkter sammen med børnenes og de unge. Det kontinuerlige arbejde med håndgribelige produkter fra idé til virkelighed, gør at iværksætter-tankegangen bliver indlejret i børnene som en tilgang til livet. Helt konkret trækker vi på metoder fra kunstneriske processer – musik, billedkunst, film og medie, scenekunst, design og håndværk, fordi vi tror på at nøglen til at låse op for barnets og den unges personlige kvaliteter viser sig allerbedst her.
                     </p>
                 </div>
             </div>
         </section>
+
     </section>
     <section class="section" id="icons">
+        <h1>De 3 Søjler</h1>
         <div class="gridcon">
             <div class="griditem">
                 <img src="icons/art.png" alt="icon for kunst" />
@@ -82,4 +72,5 @@
     <footer></footer>
     <script src="main.js"></script>
 </body>
+
 </html>
