--- a/index.html
+++ b/index.html
@@ -109,16 +109,20 @@
     </section>
 
     <section id="video">
-      <h1>Klik her for at se vores video om Bloom</h1>
-      <iframe src="https://player.vimeo.com/video/339564750?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-    </section>
-
-    <section id="kontakt_info">
+      <h1>Se vores video om Bloom</h1>
+      <iframe src="https://player.vimeo.com/video/339564750?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>  <div id="kontakt_info">
+     <div class="kontakt_bg"></div>
       <h1>Vi glæder os til at høre fra dig!</h1>
-      <div class="">
+      <div class="kontakt_link">
         <a href="kontakt.html">Skriv til os</a>
             </div>
+
+        </div>
     </section>
+
+
+
+
     <footer></footer>
     <script src="main.js"></script>
 </body>
