Styling på hovedsider

--- a/om.html
+++ b/om.html
@@ -22,7 +22,7 @@
         <section class="section">
             <div class="gridcon">
                 <div class="griditem">
-                    <h1>Vi tror på det unikke menneske</h1>
+                    <h2>Vi tror på det unikke menneske</h2>
                     <p>
                         Verdens hurtige forandringer kræver nytænkning, nye løsninger, nye jobs og nye virksomheder i systemer og formater, som vi ikke kan forestille os. Forandringer af den størrelse og i det tempo, som vi ser nu, stiller store krav til os som mennesker, til vores evne til både at passe på os selv og kloden og til at tænke nyt i en verden præget af stigende kompleksitet. Som mennesker kan vi ikke konkurrere med udviklingen og mindst af alt med maskinernes hurtighed og præcision. Vi må derfor satse på at udvikle det unikke i os som mennesker og individer – det unikke vil nemlig aldrig kunne udkonkurreres og kan ikke erstattes af hurtighed. Det er i det unikke, at vi finder det ekstraordinære – de nye perspektiver, de nye løsninger og de nye handlemønstre.
                     </p> <br>
@@ -39,7 +39,7 @@
         </section>
 
     </section>
-    <section class="section" id="icons">
+    <section id="icons">
         <h1>De 3 Søjler</h1>
         <div class="gridcon">
             <div class="griditem">
