--- a/fritidsklub.html
+++ b/fritidsklub.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da" id="fritid">
 
 <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
         <p>Iværksætterfritidsklub</p>
     </section>
     <section>
-        <div class="gridcon">
+        <div class="gridcon gridcon_campinfo">
             <div class="griditem">
                 <h2> Velkommen i Klubben</h2>
                 <p>
@@ -26,11 +26,6 @@
                 <p>Minimum 2 gange om ugen får vi besøg af en gæsteunderviser, som har planlagt et længerevarende forløb fordelt på 2 ugentlige workshops for klubbens deltagere. Kreative forløb Forløbene kan bl.a. være “lav din egen visuelle fortælling” eller “design din egen lampe af genbrugsmateriale”, hvor børnene er med til at skabe et produkt (eksempelvis en film eller en lampe) og planlægge, hvordan det skal vises frem. Forløbene træner børnenes erfaring med at komme fra en abstrakt idé til et konkret produkt/værk.</p>
                 <p>Alle workshops er tilrettelagt sådan, at børnene altid går hjem med nye evner, en ny kunstnerisk og håndværksmæssig erfaring og/eller et produkt, de selv har designet og skabt. Med et medlemskab har børnene fri adgang til klubben og alle workshops hele året. Et klippekort giver samme adgang, men i begrænset omfang, idet man bruger et klip pr. gang.
                 </p>
-            </div>
-            <div class="gridcon">
-                <div class="griditem">
-                    <img class="underimg" src="img/aktiv3.jpg" alt="dreng er lave print på en t-shirt" />
-                </div>
             </div>
         </div>
     </section>
