--- a/camp.html
+++ b/camp.html
@@ -16,64 +16,65 @@
         <p>Feriecamps</p>
     </section>
 
-    <section>
+    <section id="camp_baggrund">
 
-        <div class="gridcon">
+        <div class="gridcon_campinfo">
             <div class="griditem">
+                <h2> Iværksættercamp på Reffen</h2>
                 <p>
-                    Iværksættercamp på Reffen Over 100 børn blev seje iværksættere sidste sommer. Skal du være med i år? Hos BLOOM Institute bruger vi ferierne til at lære børn at blive iværksættere på den fede og sjove måde. Baseret på barnets lyst og motivation, skaber vi sammen designs, som vi videreudvikler til reelle produkter. Vi synes, det skal være lysten, der driver værket, og derfor samler vi børn med ideer og godt humør i alle ferierne og har de bedste skabende uger, man kan forestille sig.
+                    Over 100 børn blev seje iværksættere sidste sommer. Skal du være med i år?</p>
+                <p> Hos BLOOM Institute bruger vi ferierne til at lære børn at blive iværksættere på den fede og sjove måde. Baseret på barnets lyst og motivation, skaber vi sammen designs, som vi videreudvikler til reelle produkter. Vi synes, det skal være lysten, der driver værket, og derfor samler vi børn med ideer og godt humør i alle ferierne og har de bedste skabende uger, man kan forestille sig.
                 </p>
+                <h2>Ugens forløb
+                </h2>
+                <p>Forløbene kan have forskellige fokusområder, men er alle opbygget på en grundlæggende model for ugen, hvor det handler om at træne evnen til at gå fra ide til produkt.</p>
+                <h3>Dag 1 – Opdag</h3>
+                <p>Vi lærer hinanden at kende og kaster os ud i forskellige kunstneriske fagligheder. Vi starter altså processen med at finde vores eget personlige udtryk fra dag 1. Det kan være med kunstmaling, ved at skabe et billede med udvalgte materialer, arbejde med ler, ord, dans, genbrugsmaterialer – her er det kun fantasien, der sætter grænser.</p>
+                <h3>Dag 2 & 3 – Skab</h3>
+                <p>Vi introducerer og prøver os frem med flere forskellige teknikker. Vi arbejder videre med børnenes kunstneriske værker fra første dag. Vi vælger ud, skærer til, former, vender på hovedet og vælger et udtryk, hver enkelt har lyst til at arbejde videre med</p>
+                <h3>Dag 4 & 5 – Iværksæt</h3>
+                <p>Vi færdiggør det enkelte værk; trykker det bearbejdede billede på en t-shirt, broderer det med en broderemaskine, printer det unikke mønster i metervis af gavepapir, bygger en lampe eller laver vægfliser i plast. Vi kigger på vejen fra ide til produkt – hvad gør et produkt til et produkt? Hvad er det for en historie, der er bag produktet, og hvordan laver man et stærkt brand? Vi finder ud af, hvordan produkterne skal vises frem til forældre og besøgende. Er det med en pop-up shop eller en modeopvisning? Alt handler om at præsentere produkterne, og derfor er det vigtigt, at børnene er med til at beslutte, hvordan de gerne vil have det.</p>
             </div>
         </div>
-    </section>
-
-    <section>
-        <div class="gridcon">
-
-        </div>
-    </section>
-
-    <section class="prisliste">
-        <div class="title">
-            <h2>Kommende feriecamps</h2>
-        </div>
 
         <div class="gridcon">
-            <div class="griditem">
 
-                <h3> Skab dit eget Tøjmærke </h3>
-                <p>
-                    I løbet af 5 dage lærer du at designe og trykke dit helt eget t-shirt- eller taske-print og forstå de kunstneriske processer bag.
-                </p>
-                <ul>
-                    <li>Pris: 1200 inkl. Frokost og din egen t-shirt/taske</li>
-                    <li>
-                        Tid og sted:</li>
-                    <li>Uge 27: Refshaleøen</li>
-                    <li>Uge 32: BLOOM Institute, Gentofte</li>
-                    <li>Uge 32: Refshaleøen
-                    </li>
-                </ul>
-            </div>
-            <div class="griditem">
-                <h3>Fra skrot til flot design design </h3>
-                <p>
-                    Kom og bliv én af fremtidens designere, der kan forvandle skrot til fede produkter.
-                </p>
-                <ul>
-
-                    <li>Pris: 1200 inkl. Frokost og dit produkt</li>
-                    <li>
-                        Tid og sted:</li>
-                    <li> Uge 27: BLOOM Institute,Gentofte</li>
-                    <li> Uge 28: Refshaleøen
-                    </li>
-                </ul>
-            </div>
         </div>
-    </section>
-    <section>
-        <h3>Vi glæder os til at se jer!</h3>
+
+
+        <section class="prisliste">
+            <div class="title">
+                <h2>Kommende feriecamps</h2>
+            </div>
+
+            <div class="gridcon">
+
+                <div class="griditem">
+                    <div class="camp_griditem_title">
+                        <h3> Skab dit eget Tøjmærke </h3>
+                    </div>
+
+                    <p>
+                        I løbet af 5 dage lærer du at designe og trykke dit helt eget t-shirt- eller taske-print og forstå de kunstneriske processer bag.</p>
+                    <p> Pris:<br><br> 1200 kr. inkl. Frokost og din egen t-shirt/taske<br><br> Tid og sted:<br><br> Uge 27: Refshaleøen<br> Uge 32: BLOOM Institute, Gentofte<br> Uge 32: Refshaleøen
+                    </p>
+
+                </div>
+                <div class="griditem">
+                    <div class="camp_griditem_title">
+                        <h3>Fra skrot til flot design design </h3>
+                    </div>
+
+                    <p>
+                        Kom og bliv én af fremtidens designere, der kan forvandle skrot til fede produkter.
+                    </p>
+                    <p> Pris:<br><br> 1200 kr. inkl. Frokost<br><br> Tid og sted:<br><br> Uge 27: Refshaleøen<br> Uge 32: BLOOM Institute, Gentofte<br> Uge 32: Refshaleøen
+                    </p>
+
+                </div>
+            </div>
+            <div class="leaves_background"></div>
+        </section>
     </section>
     <footer></footer>
     <script src="main.js"></script>
