--- a/uddannelse.html
+++ b/uddannelse.html
@@ -1,80 +1,58 @@
 <!DOCTYPE html>
-<html lang="da">
-  <head>
+<html lang="da" id="uddannelse">
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <title>Uddannelsesforløb</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="hovedmenu"></div>
     <section class="splash">
-      <img src="img/splash_udd.jpg" alt="splash" />
-      <p>Uddannelsesforløb</p>
+        <img src="img/splash_udd.jpg" alt="splash" />
+        <p>Uddannelsesforløb</p>
     </section>
     <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <p>
-            Vores uddannelsesforløb bygger på børns læring ud fra kreative
-            værksteder, materialer og faciliteter inden for forskellige
-            kunstneriske udtryksformer. BLOOM Institute samarbejder med
-            professionelle kunstnere, iværksættere og det etablerede
-            erhvervsliv, når der skal laves prototyper og forretningsmodeller.
-            Efter at have oplevet stor efterspørgsel tilbyder vi nu også
-            opkvalificeringsforløb for lærere. Læs herunder om vores
-            undervisningsfaser og specifikke tilbud.
-          </p>
+        <div class="gridcon gridcon_campinfo">
+            <div class="griditem ">
+                <h2>Uddannelsesforløb</h2>
+                <p>
+                    Vores uddannelsesforløb bygger på børns læring ud fra kreative værksteder, materialer og faciliteter inden for forskellige kunstneriske udtryksformer. BLOOM Institute samarbejder med professionelle kunstnere, iværksættere og det etablerede erhvervsliv, når der skal laves prototyper og forretningsmodeller. Efter at have oplevet stor efterspørgsel tilbyder vi nu også opkvalificeringsforløb for lærere. Læs herunder om vores undervisningsfaser og specifikke tilbud.
+                </p>
+            </div>
         </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="gridcon">
-        <div class="griditem">
-          <img
-            class="underimg"
-            src="img/aktiv2.jpg"
-            alt="børn der sidder og malere rundt om et bord"
-          />
-        </div>
-      </div>
     </section>
     <section class="prisliste">
-      <div class="gridcon">
-        <div class="griditem">
-          <ul>
-            <li>Valgfaget ‘Fra idé til produkt’ – elever fra 7.-9. klasse</li>
-            <li>
-              I løbet af 10 gange arbejder vi med at realisere idéer gennem
-              digital produktion. Vi arbejder med kreative processer gennem 3
-              forskellige medier: print, robotteknologi og laserskæring. Fokus
-              gennem hele forløbet er at give eleverne en forståelse for,
-              hvordan en idé kan realiseres gennem digital produktion og blive
-              til et produkt, som kan reproduceres og sælges. Vi slutter af med
-              en butik med mange forskellige produkter bl.a. laserskårede
-              nøglering, drager og mobilholdere samt printet gavepapir og
-              plakater.
-            </li>
-          </ul>
+
+        <div class="gridcon">
+
+            <div class="griditem">
+                <div class="camp_griditem_title">
+                    <h3>Valgfaget ‘Fra idé til produkt’ – elever fra 7.-9. klasse</h3>
+                </div>
+
+                <p>
+                    I løbet af 10 gange arbejder vi med at realisere idéer gennem digital produktion. Vi arbejder med kreative processer gennem 3 forskellige medier: print, robotteknologi og laserskæring. Fokus gennem hele forløbet er at give eleverne en forståelse for, hvordan en idé kan realiseres gennem digital produktion og blive til et produkt, som kan reproduceres og sælges. Vi slutter af med en butik med mange forskellige produkter bl.a. laserskårede nøglering, drager og mobilholdere samt printet gavepapir og plakater.
+                </p>
+
+            </div>
+            <div class="griditem">
+
+                <div class="camp_griditem_title">
+                    <h3>‘UU-tema forløb’ – elever fra 4.-6. klasse</h3>
+                </div>
+                <p>
+                    Under temaet ”mental sundhed” laver vi et forløb på 13 gange. Eleverne fordyber sig først i meditation og maleaktiviteter og derefter gennemgår de en proces, hvor vi på baggrund af de kunstneriske processer, afkoder deres styrker, præferencer og tilgang til opgaver.
+                </p>
+
+            </div>
         </div>
-        <div class="griditem">
-          <ul>
-            <li>‘UU-tema forløb’ – elever fra 4.-6. klasse</li>
-            <li>
-              Under temaet ”mental sundhed” laver vi et forløb på 13 gange.
-              Eleverne fordyber sig først i meditation og maleaktiviteter og
-              derefter gennemgår de en proces, hvor vi på baggrund af de
-              kunstneriske processer, afkoder deres styrker, præferencer og
-              tilgang til opgaver.
-            </li>
-          </ul>
-        </div>
-      </div>
     </section>
     <footer></footer>
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
