--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="forside.css" />
+    <link rel="icon" href="favicon.ico">
     <title>Forside</title>
 </head>
 
