--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html id="forside" lang="da">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="forside.css" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
     <title>Forside</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="hovedmenu"></div>
     <section class="splash">
-        <img src="img/splash-forside.png" alt="splash" />
-        <p>
-            Nytænkende Uddannelseskoncepter til Børn og Unge
-        </p>
+      <img src="img/splash-forside.png" alt="splash" />
+      <p>
+        Nytænkende Uddannelseskoncepter til Børn og Unge
+      </p>
     </section>
 
     <section class="icons">
-        <div class="gridcon">
-            <div class="griditem">
-                <img src="icons/plant.png" alt="icon for fritidklubben" />
-                <h3>Iværksætterfritisklub</h3>
-                <p>
-                    Blooms private fritidsklub for børn 4. klasse og op.
-                </p>
-                <a href="fritidsklub.html" id="smallscreen" class="button">læs mere her</a
+      <div class="gridcon">
+        <div class="griditem">
+          <img src="icons/plant.png" alt="icon for fritidklubben" />
+          <h3>Iværksætterfritisklub</h3>
+          <p>
+            Blooms private fritidsklub for børn 4. klasse og op.
+          </p>
+          <a href="fritidsklub.html" id="smallscreen" class="button"
+            >læs mere her</a
           >
         </div>
 
@@ -39,14 +39,16 @@
             Forløb der bygger på børns læring i ferieperioderne.
           </p>
           <a href="camp.html" id="smallscreen1" class="button">læs mere her</a>
-            </div>
-            <div class="griditem">
-                <img src="icons/books.png" alt="icon for uddannelse forløb" />
-                <h3>Undervisningsforløb</h3>
-                <p>
-                    Skoleforløb der bygger på børns læring ud fra forskellige kunstneriske udtryksformer.
-                </p>
-                <a href="uddannelse.html" id="smallscreen2" class="button">læs mere her</a
+        </div>
+        <div class="griditem">
+          <img src="icons/books.png" alt="icon for uddannelse forløb" />
+          <h3>Undervisningsforløb</h3>
+          <p>
+            Skoleforløb der bygger på børns læring ud fra forskellige
+            kunstneriske udtryksformer.
+          </p>
+          <a href="uddannelse.html" id="smallscreen2" class="button"
+            >læs mere her</a
           >
         </div>
         <div class="griditem">
@@ -70,9 +72,10 @@
         </div>
         <div class="griditem">
           <a href="camp.html" id="bigscreen1" class="button">læs mere her</a>
-            </div>
-            <div class="griditem">
-                <a href="uddannelse.html" id="bigscreen2" class="button">læs mere her</a
+        </div>
+        <div class="griditem">
+          <a href="uddannelse.html" id="bigscreen2" class="button"
+            >læs mere her</a
           >
         </div>
         <div class="griditem">
@@ -94,11 +97,13 @@
             midt i Gentofte. Historisk set har KTAS's bygninger over hele landet
             haft en særlig betydning og blev placeret i hjertet af den enkelte
             by, for at skabe kontakt mellem mennesker og give liv til nye
-              relationer og projekter.</p>
-              <p> Hos os i Bloom fortsætter vi denne
-            tradition i en endnu mere nærværende form, hvor bygningen er rammen
-            for nye kreative og skabende fællesskaber. Hos Bloom har vi fokus på
-            de kreative relationer med de deltagende børn og voksne og på den
+            relationer og projekter.
+          </p>
+          <p>
+            Hos os i Bloom fortsætter vi denne tradition i en endnu mere
+            nærværende form, hvor bygningen er rammen for nye kreative og
+            skabende fællesskaber. Hos Bloom har vi fokus på de kreative
+            relationer med de deltagende børn og voksne og på den
             håndværksmæssige ånd som grundlag for personlig og kommerciel
             udvikling.
           </p>
@@ -111,21 +116,25 @@
 
     <section id="video">
       <h1>Se vores video om Bloom</h1>
-      <iframe src="https://player.vimeo.com/video/339564750?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>  <div id="kontakt_info">
-     <div class="kontakt_bg"></div>
-      <h1>Vi glæder os til at høre fra dig!</h1>
-      <div class="kontakt_link">
-        <a href="kontakt.html">Skriv til os</a>
-            </div>
-
+      <iframe
+        src="https://player.vimeo.com/video/339564750?title=0&byline=0&portrait=0"
+        width="640"
+        height="360"
+        frameborder="0"
+        allow="autoplay; fullscreen"
+        allowfullscreen
+      ></iframe>
+      <div id="kontakt_info">
+        <div class="kontakt_bg"></div>
+        <h1>Vi glæder os til at høre fra dig!</h1>
+        <div class="kontakt_link">
+          <a href="kontakt.html">Skriv til os</a>
         </div>
+      </div>
     </section>
-
-
-
 
     <footer></footer>
     <script src="main.js"></script>
-</body>
-
+    <script src="forside.js"></script>
+  </body>
 </html>
