--- a/kontakt.html
+++ b/kontakt.html
@@ -118,10 +118,17 @@
           style="height:200px"
         ></textarea>
 
-        <input type="submit" value="Submit" />
+        <input id="submitbtn" value="Submit" />
       </form>
     </section>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Tak for din henvendelse vi vender tilbage så snart det er muligt</p>
+      </div>
+    </div>
     <footer></footer>
     <script src="main.js"></script>
+    <script src="kontakt.js"></script>
   </body>
 </html>
