--- a/footer.html
+++ b/footer.html
@@ -9,16 +9,16 @@
   </div>
   <div>
     <div class="gridcon_icons"></div>
-    <a href=""
+    <a href="https://www.instagram.com/skaberiet_nu/"
       ><img
         class="footer_icons"
         alt="instagram logo"
         src="icons/instagram-logo.png"
     /></a>
-    <a href=""
+    <a href="https://www.youtube.com/channel/UCA49EYQvQc8pOlkxEK_Vrpg"
       ><img class="footer_icons" alt="youtube logo" src="icons/youtybe-logo.png"
     /></a>
-    <a href=""
+    <a href="https://www.facebook.com/Skaberiet/"
       ><img
         class="footer_icons"
         alt="facebook logo"
