--- a/mobilmenu.html
+++ b/mobilmenu.html
@@ -27,17 +27,12 @@
       <a href="index.html"><img src="img/6.png" alt="blooms logo"/></a>
       <a href="index.html" class="link">Forside</a>
       <a class="link" href="om.html">Om os</a>
-      <div class="dropd">
-        <a class="dropbtn link" href="Aktiviteter.html">Aktiviteter</a>
 
-        <div class="dropdownc">
-          <a href="camp.html">Camps</a>
-          <a href="fritidsklub.html">Fritidsklub</a>
-          <a href="uddannelse.html">Uddannelse af lærer</a>
-          <a href="internationalt.html">Internationalt arbejde</a>
-        </div>
-      </div>
-
+      <a class="link" href="Aktiviteter.html">Aktiviteter</a>
+      <a class="link" href="camp.html">Camps</a>
+      <a class="link" href="fritidsklub.html">Fritidsklub</a>
+      <a class="link" href="uddannelse.html">Uddannelseforløb</a>
+      <a class="link" href="internationalt.html">Internationalt arbejde</a>
       <a class="link" href="kontakt.html">Kontakt</a>
     </div>
   </div>
